# XOR-Gate-Neural-Network-in-Cpp

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  LICENSE  Net.cpp  Net.h  Neuron.cpp  Neuron.h  README.md  TrainingData.cpp  TrainingData.h  generateTrainingData.cpp  main.cpp  trainingData.txt
